...
            app:layout_constraintTop_toBottomOf="@+id/details_layout"
            tools:text="@string/bio">

        </TextView>

        <TextView
            android:id="@+id/cat_temp_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:text="@string/temperment"
            android:textColor="@color/black"
...
